Ethash to ETCHash
Ethash to ETCHash

--- a/_specs/ecip-1049.md
+++ b/_specs/ecip-1049.md
@@ -20,7 +20,7 @@ Copyright under Apache 2.0 license.
 ### Specification
 *ECIP Editor Note: Please Update to ECIP-1000 compliance.*
 
-Use Keccak256 with no DAG instead of ~~Ethash~~ as the proof-of-work mechanism on Ethereum Classic.
+Use Keccak256 with no DAG instead of ETChash as the proof-of-work mechanism on Ethereum Classic.
 
 ### Motivation
 *ECIP Editor Note: Please Update to ECIP-1000 compliance.*
