Add WIP Disclaimer
Add WIP Disclaimer. Grammar. Formatting. Punctuation. Organize Sections to ECIP-1000. Clarify we is not the network, but a development team.

--- a/_specs/ecip-1107.md
+++ b/_specs/ecip-1107.md
@@ -1,6 +1,6 @@
 ---
 ecip: 1107
-title: WIP - Proof of Work Transition Process Testing
+title: [WIP] Proof of Work Transition Process Testing
 lang: en
 translator: 
 author: Antoine Toulme (@atoulme)
@@ -14,30 +14,45 @@ superseded-by:
 resolution: 
 ---
 
+### Work in Progress
+
+	Work in progress (WIP) -- An ECIP where the author has asked the Ethereum Classic community whether an idea has any chance of support, he/she will write a draft ECIP as a pull request. However, if the idea is still in a very early stage, and will have a lot of commits and changes by the author, editors or contributors, it may be better to enter it as a WIP. Make sure to add [WIP] in the title (example: [WIP] ECIP-X) of the early stage ECIP so other members can mute it if they are not interested in participating at this stage.
+
+Read more about Ethereum Classic Improvement Proposals (ECIPs) at [https://github.com/ethereumclassic/ECIPs](https://github.com/ethereumclassic/ECIPs) and [ECIP-1000](http://ecips.ethereumclassic.org/ECIPs/ecip-1000).
+
 ### Abstract
-Taking after [core dev call 18](https://github.com/ethereumclassic/ECIPs/issues/434), we want to look into forking mainnet into a separate network to test Keccak mining and transitions between etchash and keccak mining and vice versa. 
 
-### Motivation
-We are looking to create a situation where we transition across proof of work algorithms and require something that looks as close as possible as the real thing.
+Taking after [Core Dev Call 18](https://github.com/ethereumclassic/ECIPs/issues/434), [ETC Cooperative](https://etccooperative.org/) wants to test forking Ethereum Classic Mainnet into a separate network to test Keccak256 mining and the transition process between ETChash and Keccak256 mining and vice versa. 
 
-### Specification
-We want to select a block of ETC mainnet and take all account information, sent to a separate network.
-The network must have a different chain id.
-The network must allow to change the proof of work algorithm in use.
-It should be possible to change the proof of work algorithm back and forth between etchash and keccak.
-TBD whether the change should be cyclical or on demand.
-
-### Rationale
-We want to make sure we can easily change between proof of work algorithms.
-In particular, we want to make sure we can adjust difficulty faster during the adjustment period of the algorithm.
-
-### Backwards compatibility
-TBD
-
-### Reference implementation
-TBD
-
-### Copyright/Licensing
+### Copyright / Licensing
 
 Copyright and related rights waived via [CC0](https://creativecommons.org/publicdomain/zero/1.0/).
 
+### Specification
+**ECIP Editor Note:** Please update section to [ECIP-1000](http://ecips.ethereumclassic.org/ECIPs/ecip-1000) standards.
+
+* [ETC Cooperative](https://etccooperative.org/) wants to select a block of ETC mainnet and take all account information, sent to a separate network.
+* The network must have a different `chain_id`.
+* The network must allow to change the Proof of Work algorithm in use.
+* It should be possible to change the Proof of Work algorithm back and forth between ETChash and Keccak256.
+* TBD whether the change should be cyclical or on demand.
+
+### Motivation
+**ECIP Editor Note:** Please update section to [ECIP-1000](http://ecips.ethereumclassic.org/ECIPs/ecip-1000) standards.
+
+[ETC Cooperative](https://etccooperative.org/) is testing a situation where we transition across Proof of Work algorithms and require something that looks as close as possible as the real thing.
+
+### Rationale
+**ECIP Editor Note:** Please update section to [ECIP-1000](http://ecips.ethereumclassic.org/ECIPs/ecip-1000) standards.
+
+[ETC Cooperative](https://etccooperative.org/) wants to make sure we can easily change between Proof of Work algorithms. In particular, we want to make sure we can adjust difficulty faster during the adjustment period of the algorithm.
+
+### Backwards compatibility
+**ECIP Editor Note:** Please update section to [ECIP-1000](http://ecips.ethereumclassic.org/ECIPs/ecip-1000) standards.
+
+Work in progress.
+
+### Reference implementation
+**ECIP Editor Note:** Please update section to [ECIP-1000](http://ecips.ethereumclassic.org/ECIPs/ecip-1000) standards.
+
+Work in progress.
