--- a/_specs/ecip-1049.md
+++ b/_specs/ecip-1049.md
@@ -10,6 +10,7 @@ author: Bob Summerwill <bob@etccooperative.org>, Alexander Tsankov <alexander.ts
 created: 2019-01-08
 license: Apache-2.0
 ---
+
 ### Work in Progress
 
 	Work in progress (WIP) -- An ECIP where the author has asked the Ethereum Classic community whether an idea has any chance of support, he/she will write a draft ECIP as a pull request. However, if the idea is still in a very early stage, and will have a lot of commits and changes by the author, editors or contributors, it may be better to enter it as a WIP. Make sure to add [WIP] in the title (example: [WIP] ECIP-X) of the early stage ECIP so other members can mute it if they are not interested in participating at this stage.
@@ -17,25 +18,33 @@ license: Apache-2.0
 Read more about Ethereum Classic Improvement Proposals (ECIPs) at [https://github.com/ethereumclassic/ECIPs](https://github.com/ethereumclassic/ECIPs) and [ECIP-1000](http://ecips.ethereumclassic.org/ECIPs/ecip-1000).
 
 ### Abstract
+
 A proposal to replace the current Ethereum Classic proof of work algorithm Etchash with Keccak-256.
 
-### Copyright/Licensing
+### Copyright / Licensing
+
 Copyright under Apache 2.0 license.
 
 ### Specification
-*ECIP Editor Note: Please Update to ECIP-1000 compliance.*
+**ECIP Editor Note:** Please update section to [ECIP-1000](http://ecips.ethereumclassic.org/ECIPs/ecip-1000) standards.
+
+Work in Progress.
 
 Use Keccak256 with no DAG instead of ETChash as the proof-of-work mechanism on Ethereum Classic.
 
 ### Motivation
-*ECIP Editor Note: Please Update to ECIP-1000 compliance.*
+**ECIP Editor Note:** Please update section to [ECIP-1000](http://ecips.ethereumclassic.org/ECIPs/ecip-1000) standards.
+
+Work in Progress.
 
 * A response to the recent double-spend attacks against Ethereum Classic. Most of this hashpower was rented or came from other chains, specfically Ethereum (ETH). A seperate proof of work algorithm would encourage the development of a specialized Ethereum Classic mining community, and blunt the ability for attackers to purchase mercenary hash power on the open-market.
 
 * As a secondary benefit, deployed smart contracts and dapps running on chain are currently able to use `keccak256()` in their code. This ECIP could open the possibility of smart contracts being able to evaluate chain state, and simplify second layer (L2) development.
 
 ### Rationale
-*ECIP Editor Note: Please Update to ECIP-1000 compliance.*
+**ECIP Editor Note:** Please update section to [ECIP-1000](http://ecips.ethereumclassic.org/ECIPs/ecip-1000) standards.
+
+Work in Progress.
 
 ### Reason 1: Similarity to Bitcoin
 The Bitcoin network currently uses the CPU-intensive SHA256 Algorithm to evaluate blocks. When Ethereum was deployed it used a different algorithm, Dagger-Hashimoto, which eventually became Ethash on 1.0 launch. Dagger-Hashimoto was explicitly designed to be memory-intensive with the goal of ASIC resistance [1]. It has been provably unsuccessful at this goal, with Ethash ASICs currently easily availalble on the market.
@@ -59,14 +68,14 @@ In Solidity, developers have access to the `keccak256()` function, which allows 
 With the direction that Ethereum Classic is taking: a focus on Layer-2 solutions and cross-chain compatibility; being able to evaluate proof of work on chain, will be tremendously valuable to developers of both smart-contracts and node software writers. This could greatly simplify interoperability. 
 
 ### Backwards compatibility
-*ECIP Editor Note: Please Update to ECIP-1000 compliance.*
+**ECIP Editor Note:** Please update section to [ECIP-1000](http://ecips.ethereumclassic.org/ECIPs/ecip-1000) standards.
 
-Work in progress.
+Work in Progress.
 
 ### Reference implementation
-*ECIP Editor Note: Please Update to ECIP-1000 compliance.*
+**ECIP Editor Note:** Please update section to [ECIP-1000](http://ecips.ethereumclassic.org/ECIPs/ecip-1000) standards.
 
-Work in Progress:
+Work in Progress.
 
 Example of a Smart contract hashing being able to trustlessly Keccak hash a hypothetical block header.
 ![example](https://i.imgur.com/xh3WgCF.png)
