--- a/_specs/ecip-1107.md
+++ b/_specs/ecip-1107.md
@@ -31,6 +31,8 @@ Copyright and related rights waived via [CC0](https://creativecommons.org/public
 ### Specification
 **ECIP Editor Note:** Please update section to [ECIP-1000](http://ecips.ethereumclassic.org/ECIPs/ecip-1000) standards.
 
+Work in Progress.
+
 * [ETC Cooperative](https://etccooperative.org/) wants to select a block of ETC mainnet and take all account information, sent to a separate network.
 * The network must have a different `chain_id`.
 * The network must allow to change the Proof of Work algorithm in use.
@@ -40,19 +42,23 @@ Copyright and related rights waived via [CC0](https://creativecommons.org/public
 ### Motivation
 **ECIP Editor Note:** Please update section to [ECIP-1000](http://ecips.ethereumclassic.org/ECIPs/ecip-1000) standards.
 
+Work in Progress.
+
 [ETC Cooperative](https://etccooperative.org/) is testing a situation where we transition across Proof of Work algorithms and require something that looks as close as possible as the real thing.
 
 ### Rationale
 **ECIP Editor Note:** Please update section to [ECIP-1000](http://ecips.ethereumclassic.org/ECIPs/ecip-1000) standards.
+
+Work in Progress.
 
 [ETC Cooperative](https://etccooperative.org/) wants to make sure we can easily change between Proof of Work algorithms. In particular, we want to make sure we can adjust difficulty faster during the adjustment period of the algorithm.
 
 ### Backwards compatibility
 **ECIP Editor Note:** Please update section to [ECIP-1000](http://ecips.ethereumclassic.org/ECIPs/ecip-1000) standards.
 
-Work in progress.
+Work in Progress.
 
 ### Reference implementation
 **ECIP Editor Note:** Please update section to [ECIP-1000](http://ecips.ethereumclassic.org/ECIPs/ecip-1000) standards.
 
-Work in progress.
+Work in Progress.
