Assign ECIP Number
+ Assign Number
+ Add Discussion Thread

--- a/_specs/ecip-1108.md
+++ b/_specs/ecip-1108.md
@@ -1,8 +1,8 @@
 ---
-ecip: 110x
+ecip: 1108
 title: 'TABS: An Experiment with a 2-Dimensional Consensus Scoring Protocol'
 author: Isaac (https://github.com/whilei)
-discussions-to: TODO
+discussions-to: https://github.com/ethereumclassic/ECIPs/issues/488
 status: Draft
 type: Informational
 category: Core
@@ -361,6 +361,3 @@ This strategy would be observable in real time by the public.
 An attacker could challenge the assumption that no entity controls more than the public TABS value for some time. The value of TABS relative to current supply and its account distribution informs this risk model.
 
 This attack, like a pure-PoW double-spend attack, would be invisible until published.
-
-
-
