--- a/_specs/ecip-1104.md
+++ b/_specs/ecip-1104.md
@@ -2,7 +2,7 @@
 lang: en
 ecip: 1104
 title:  Mystique EVM and Protocol Upgrades
-status: Accepted
+status: Final
 type: Meta
 author: Cody Burns (@dontpanicburns)
 created: 2021-07-28
