Fix Link for Author (#489)
* Fix Link for Author

Link markdown formatting

* Update ecip-1108.md

--- a/_specs/ecip-1108.md
+++ b/_specs/ecip-1108.md
@@ -1,7 +1,7 @@
 ---
 ecip: 1108
 title: 'TABS: An Experiment with a 2-Dimensional Consensus Scoring Protocol'
-author: Isaac (https://github.com/whilei)
+author: Isaac (@whilei)
 discussions-to: https://github.com/ethereumclassic/ECIPs/issues/488
 status: Draft
 type: Informational
