--- a/_specs/ecip-1066.md
+++ b/_specs/ecip-1066.md
@@ -30,4 +30,5 @@ Ethereum Classic network mainnet.
 | 2020-11-28 |   11,700,000 | Thanos                 | [ECIP-1099](https://ecips.ethereumclassic.org/ECIPs/ecip-1099) |
 | 2021-07-23 |   13,189,133 | Magneto                | [ECIP-1103](https://ecips.ethereumclassic.org/ECIPs/ecip-1103) |
 | 2022-02-12 |   14,525,000 | Mystique               | [ECIP-1104](https://ecips.ethereumclassic.org/ECIPs/ecip-1104) |
-| TBD        |   15,000,001 | 5M20 Era 4             | [ECIP-1017](https://ecips.ethereumclassic.org/ECIPs/ecip-1017) |
+| 2022-04-25 |   15,000,001 | 5M20 Era 4             | [ECIP-1017](https://ecips.ethereumclassic.org/ECIPs/ecip-1017) |
+| TBD        |   20,000,001 | 5M20 Era 5             | [ECIP-1017](https://ecips.ethereumclassic.org/ECIPs/ecip-1017) |
