ECIP-1066: revise table to show EIP/ECIP::Fork relationships (#499)
* Updates to the "Ethereum Classic Network Description" which is the canonical description of ETC hard forks:

- Added missing entry for EIP-160 (Spurious Dragon for ETC)
- Minor fix to URL for EIP-684.

We could really use proper "Meta" ECIPs to record these early hardforks, but that is a task for another day.

- "Gas Reprice" (ETC's Tangerine Whistle)
- "Die Hard" (ETC's Spurious Dragon and difficulty bomb delay)
- "Gotham" (Fixed monetary policy)
- "Defuse Difficulty Bomb"

* _specs/ecip-1066: use fork/eip table structure

Date: 2022-10-28 10:54:29-07:00
Signed-off-by: meows <b5c6@protonmail.com>

* remove MESS line from list

resolves https://github.com/ethereumclassic/ECIPs/pull/499/files#r1012354635

Signed-off-by: meows <b5c6@protonmail.com>
Co-authored-by: Bob Summerwill <bob@summerwill.net>

--- a/_specs/ecip-1066.md
+++ b/_specs/ecip-1066.md
@@ -11,24 +11,20 @@ created: 2019-10-07
 This document records feature upgrades that have been applied in
 Ethereum Classic network mainnet.
 
-| Date       | Block Number | Milestone Name         | ECIP Specification                                             |
-| ---------- | ------------ | ---------------------- | -------------------------------------------------------------- |
-| 2015-07-30 |            0 | Frontier               | [EIP-684](https://github.com/ethereum/EIPs/issues/684)         |
-| 2015-07-30 |            1 | 5M20 Era 1             | [ECIP-1017](https://ecips.ethereumclassic.org/ECIPs/ecip-1017) |
-| 2015-09-08 |      200,000 | Ice Age                | [EIP-684](https://github.com/ethereum/EIPs/issues/684)         |
-| 2016-03-15 |    1,150,000 | Homestead              | [EIP-606](https://eips.ethereum.org/EIPS/eip-606)              |
-| 2016-10-24 |    2,500,000 | Gas Reprice            | [ECIP-1015](https://ecips.ethereumclassic.org/ECIPs/ecip-1015) |
-| 2017-01-13 |    3,000,000 | Die Hard               | [ECIP-1010](https://ecips.ethereumclassic.org/ECIPs/ecip-1010) |
-| 2017-12-11 |    5,000,000 | Gotham                 | [ECIP-1017](https://ecips.ethereumclassic.org/ECIPs/ecip-1017) |
-| 2017-12-11 |    5,000,000 | Gotham                 | [ECIP-1039](https://ecips.ethereumclassic.org/ECIPs/ecip-1039) |
-| 2017-12-11 |    5,000,001 | 5M20 Era 2             | [ECIP-1017](https://ecips.ethereumclassic.org/ECIPs/ecip-1017) |
-| 2018-05-29 |    5,900,000 | Defuse Difficulty Bomb | [ECIP-1041](https://ecips.ethereumclassic.org/ECIPs/ecip-1041) |
-| 2019-09-12 |    8,772,000 | Atlantis               | [ECIP-1054](https://ecips.ethereumclassic.org/ECIPs/ecip-1054) |
-| 2020-01-11 |    9,573,000 | Agharta                | [ECIP-1056](https://ecips.ethereumclassic.org/ECIPs/ecip-1056) |
-| 2020-03-17 |   10,000,001 | 5M20 Era 3             | [ECIP-1017](https://ecips.ethereumclassic.org/ECIPs/ecip-1017) |
-| 2020-06-01 |   10,500,839 | Phoenix                | [ECIP-1088](https://ecips.ethereumclassic.org/ECIPs/ecip-1088) |
-| 2020-11-28 |   11,700,000 | Thanos                 | [ECIP-1099](https://ecips.ethereumclassic.org/ECIPs/ecip-1099) |
-| 2021-07-23 |   13,189,133 | Magneto                | [ECIP-1103](https://ecips.ethereumclassic.org/ECIPs/ecip-1103) |
-| 2022-02-12 |   14,525,000 | Mystique               | [ECIP-1104](https://ecips.ethereumclassic.org/ECIPs/ecip-1104) |
-| 2022-04-25 |   15,000,001 | 5M20 Era 4             | [ECIP-1017](https://ecips.ethereumclassic.org/ECIPs/ecip-1017) |
-| TBD        |   20,000,001 | 5M20 Era 5             | [ECIP-1017](https://ecips.ethereumclassic.org/ECIPs/ecip-1017) |
+| Version and Code Name                        | Block No. | Released   | Incl EIPs                                                                                                                                                                                                                                                                                                                                                                                                                                                                        | Specs                                               | Blog | 
+|----------------------------------------------|-----------|------------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|----------------------------------------------------------------|  
+| Mystique <sub>London</sub>                   | 1452500   | 2022-02-12 | [EIP-3529](https://eips.ethereum.org/EIPS/eip-3529) <br/> [EIP-3541](https://eips.ethereum.org/EIPS/eip-3541)                                                                                                                                                                                                                                                                                                                                                                    | [ECIP-1104](https://ecips.ethereumclassic.org/ECIPs/ecip-1104) |                                                   |  |
+| Magneto <sub>Berlin</sub>                    | 13189133  | 2021-07-23 | [EIP-2565](https://eips.ethereum.org/EIPS/eip-2565) <br/> [EIP-2929](https://eips.ethereum.org/EIPS/eip-2929) <br/> [EIP-2718](https://eips.ethereum.org/EIPS/eip-2718) <br/> [EIP-2930](https://eips.ethereum.org/EIPS/eip-2930)                                                                                                                                                                                                                                                | [ECIP-1103](https://ecips.ethereumclassic.org/ECIPs/ecip-1103) |                                                   |  |
+| Thanos                                       | 11700000  | 2020-11-28 | [ECIP-1099](https://ecips.ethereumclassic.org/ECIPs/ecip-1099)                                                                                                                                                                                                                                                                                                                                                                                                                   |                                                                |                                                   |  |
+| Phoenix <sub>Istanbul</sub>                  | 10500839  | 2020-06-01 | [EIP-152](https://eips.ethereum.org/EIPS/eip-152) <br/> [EIP-1108](https://eips.ethereum.org/EIPS/eip-1108) <br/> [EIP-1344](https://eips.ethereum.org/EIPS/eip-1344) <br/> [EIP-1884](https://eips.ethereum.org/EIPS/eip-1884) <br/> [EIP-2028](https://eips.ethereum.org/EIPS/eip-2028) <br/> [EIP-2200](https://eips.ethereum.org/EIPS/eip-2200)                                                                                                                              | [ECIP-1088](https://ecips.ethereumclassic.org/ECIPs/ecip-1088) |                                                   |  |
+| Agharta <sub>Constantinople+Petersburg</sub> | 9583000   | 2020-01-11 | [EIP-145](https://eips.ethereum.org/EIPS/eip-145) <br/> [EIP-1014](https://eips.ethereum.org/EIPS/eip-1014) <br/> [EIP-1052](https://eips.ethereum.org/EIPS/eip-1052)                                                                                                                                                                                                                                                                                                            | [ECIP-1056](https://ecips.ethereumclassic.org/ECIPs/ecip-1056) |                                                   |  |
+| Atlantis <sub>Byzantium</sub>                | 8772000   | 2019-09-12 | [EIP-100](https://eips.ethereum.org/EIPS/eip-100) <br/> [EIP-140](https://eips.ethereum.org/EIPS/eip-140) <br/> [EIP-196](https://eips.ethereum.org/EIPS/eip-196) <br/> [EIP-197](https://eips.ethereum.org/EIPS/eip-197) <br/> [EIP-198](https://eips.ethereum.org/EIPS/eip-198) <br/> [EIP-211](https://eips.ethereum.org/EIPS/eip-211) <br/> [EIP-214](https://eips.ethereum.org/EIPS/eip-214) <br/> [EIP-658](https://eips.ethereum.org/EIPS/eip-658) | [ECIP-1054](https://ecips.ethereumclassic.org/ECIPs/ecip-1054) |  |
+| Defuse Difficulty Bomb                       | 5900000   | 2018-05-29 | [ECIP-1041](https://ecips.ethereumclassic.org/ECIPs/ecip-1041)                                                                                                                                                                                                                                                                                                                                                                                                                   |                                                                |  |
+| Gotham                                       | 5000000   | 2017-12-11 | [ECIP-1017](https://ecips.ethereumclassic.org/ECIPs/ecip-1017) <br> [ECIP-1039](https://ecips.ethereumclassic.org/ECIPs/ecip-1039)                                                                                                                                                                                                                                                                                                                                               |                                                                |  |
+| Die Hard <sub>Spurious Dragon</sub>          | 3000000   | 2017-01-13 | [ECIP-1010](https://ecips.ethereumclassic.org/ECIPs/ecip-1010) <br> [EIP-155](https://eips.ethereum.org/EIPS/eip-155) <br/> [EIP-160](https://eips.ethereum.org/EIPS/eip-160)                                                                                                                                                                                                                                                                                                    |                                                                |  |
+| Gas Reprice <sub>Tangerine Whistle</sub>     | 2500000   | 2016-10-24 | [EIP-150](https://eips.ethereum.org/EIPS/eip-150)                                                                                                                                                                                                                                                                                                                                                                                                                                | [ECIP-1015](https://ecips.ethereumclassic.org/ECIPs/ecip-1015) | |
+| ~~DAO Fork~~                                 | 1920000   | 2016-07-20 |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  | [HFM-779](https://eips.ethereum.org/EIPS/eip-779)              | [Blog](https://blog.ethereum.org/2016/07/15/to-fork-or-not-to-fork/) |
+| DAO Wars                                     | aborted   | aborted    |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |                                                                | [Blog](https://blog.ethereum.org/2016/06/24/dao-wars-youre-voice-soft-fork-dilemma/) |
+| Homestead                                    | 1150000   | 2016-03-14 | [EIP-2](https://eips.ethereum.org/EIPS/eip-2) <br/> [EIP-7](https://eips.ethereum.org/EIPS/eip-7) <br/> [EIP-8](https://eips.ethereum.org/EIPS/eip-8)                                                                                                                                                                                                                                                                                                                            | [HFM-606](https://eips.ethereum.org/EIPS/eip-606)              | [Blog](https://blog.ethereum.org/2016/02/29/homestead-release/) |
+| Frontier Thawing                             | 200000    | 2015-09-07 |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |                                                                | [Blog](https://blog.ethereum.org/2015/08/04/the-thawing-frontier/) |
+| Frontier                                     | 1         | 2015-07-30 |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  |                                                                | [Blog](https://blog.ethereum.org/2015/07/22/frontier-is-coming-what-to-expect-and-how-to-prepare/) |
