--- a/_specs/ecip-1000.md
+++ b/_specs/ecip-1000.md
@@ -72,14 +72,13 @@ A good reason to transfer ownership is because the original author no longer has
 
 Current ECIP editors:
 
-
-* @atoulme - Antoine Toulme, Independent
-* @gitr0n1n - r0n1n, Independent
 * @IstoraMandiri - Istora Mandiri, Independent
+* @gitr0n1n - r0n1n, Ethereum Classic DAO
 * @meowsbits - Mr. Meows D. Bits, ETC Cooperative Staff
 
 Former ECIP editors:
 
+* @atoulme - Antoine Toulme
 * @BelfordZ - Zachary Belford
 * @faraggi - Felipe Faraggi
 * @realcodywburns - Cody Burns
