Fix ecip-1109 author email link

--- a/_specs/ecip-1109.md
+++ b/_specs/ecip-1109.md
@@ -4,7 +4,7 @@ ecip: 1109
 title: Spiral EVM and Protocol Upgrades
 status: Draft
 type: Meta
-author: Christos Ziogas <chris@etccooperative.org>, Diego López León (diego@etccooperative.org), Isaac Ardis <isaac@etccooperative.org>
+author: Christos Ziogas <chris@etccooperative.org>, Diego López León <diego@etccooperative.org>, Isaac Ardis <isaac@etccooperative.org>
 created: 2023-05-10
 discussions-to: https://github.com/ethereumclassic/ECIPs/discussions/511
 ---
