--- a/_specs/ecip-1109.md
+++ b/_specs/ecip-1109.md
@@ -38,8 +38,8 @@ Beacon chain withdrawals are omitted at this time as they are not applicable for
 
 This document proposes the following blocks at which to implement these changes in the Ethereum Classic networks:
 
-- `9_000_000` on Mordor Classic testnet (TBD)
-- `18_000_000` on Ethereum Classic mainnet (TBD)
+- `9_957_000` on Mordor testnet
+- `TBD` on Ethereum Classic mainnet
 
 For more information on the opcodes and their respective EIPs and implementations, please see the _Specification_ section of this document.
 
