--- a/_specs/ecip-1109.md
+++ b/_specs/ecip-1109.md
@@ -10,10 +10,10 @@ discussions-to: https://github.com/ethereumclassic/ECIPs/discussions/511
 ---
 
 ### Simple Summary
-Enable the outstanding Ethereum Foundation **Shangai** network protocol upgrades on the Ethereum Classic network in a hard-fork code-named Spiral to enable maximum compatibility across these networks.
+Enable the outstanding Ethereum Foundation **Shanghai** network protocol upgrades on the Ethereum Classic network in a hard-fork code-named Spiral to enable maximum compatibility across these networks.
 
 ### Abstract
-Add support for a subset of protocol-impacting changes introduced in the Ethereum Foundation (ETH) network via the _Shangai_ network upgrade. The proposed changes for Ethereum Classic's _Spiral_ upgrade include:
+Add support for a subset of protocol-impacting changes introduced in the Ethereum Foundation (ETH) network via the _Shanghai_ network upgrade. The proposed changes for Ethereum Classic's _Spiral_ upgrade include:
 
 EIP | Description | Status
 -- | -- | --
