ecbp-1110: linkify core-geth ref
Signed-off-by: meows <b5c6@protonmail.com>

--- a/_specs/ecip-1110.md
+++ b/_specs/ecip-1110.md
@@ -13,7 +13,7 @@ license: Apache-2
 
 ## Abstract
 
-Turn off the artificial finality mechanism [ECBP-1100's MESS (Modified Exponential Scoring)](/_specs/ecip-1100.md) in Core-Geth (https://github.com/etclabscore/core-geth) for Ethereum Classic.
+Turn off the artificial finality mechanism [ECBP-1100's MESS (Modified Exponential Scoring)](/_specs/ecip-1100.md) in [Core-Geth](https://github.com/etclabscore/core-geth) for Ethereum Classic.
 
 ## Motivation
 
