fill discussions-to link
Signed-off-by: meows <b5c6@protonmail.com>

--- a/_specs/ecip-1110.md
+++ b/_specs/ecip-1110.md
@@ -3,7 +3,7 @@ ecip: 1110
 title: Deactivate MESS (Modified Exponential Subjective Scoring)
 lang: en
 author: Isaac <isaac@etccooperative.org>
-discussions-to: TODO
+discussions-to: https://github.com/ethereumclassic/ECIPs/issues/521
 status: Active
 type: Standards Track
 category: ECBP
