--- a/_specs/ecip-1047.md
+++ b/_specs/ecip-1047.md
@@ -3,7 +3,7 @@ lang: en
 ecip: 1047
 title: Reduce Gas Limit to 1 Million
 author: Anthony Lusardi (@pyskell)
-status: Draft
+status: Withdrawn
 type: Informational
 created: 2019/1/3
 discussions-to: https://github.com/ethereumclassic/ECIPs/issues/14
