mordor: deactivate at block 10.4M
Signed-off-by: meows <b5c6@protonmail.com>

--- a/_specs/ecip-1110.md
+++ b/_specs/ecip-1110.md
@@ -31,6 +31,10 @@ An override flag for this decision will be provided to configure ongoing operati
 
 Users will be encouraged to upgrade to Core-Geth v1.12.17, or to deactivate MESS manually, which can be done with all versions of core-geth implementing MESS using the flag value: `--ecbp1100=99999999999` or equivalent.
 
+### Mordor (ETC PoW Testnet)
+
+MESS will be deactivated at block `10,400,000`.
+
 ## Rationale
 
 While limited data circumscribes our understanding of hashrate supply, an apparent migration of an original roughly 1000 TH/s economy to currently about 20% of that, it seems reasonable to conclude that the costs of MESS now outweigh the risks it was designed to mitigate, since ETC's current hashrate accounts for around 85% of the apparent hashrate supply.
