ecip-1100: status change: Active->Replaced
Signed-off-by: meows <b5c6@protonmail.com>

--- a/_specs/ecip-1100.md
+++ b/_specs/ecip-1100.md
@@ -4,7 +4,7 @@ title: MESS (Modified Exponential Subjective Scoring)
 lang: en
 author: Isaac <b5c6@protonmail.com>
 discussions-to: https://github.com/ethereumclassic/ECIPs/issues/374
-status: Active
+status: Replaced
 type: Standards Track
 category: ECBP
 created: 2020-09-09
@@ -14,6 +14,8 @@ license: Apache-2
 ## Abstract
 
 Define a function arbitrating chain acceptance using relative total difficulty and common ancestor time to raise finality confidence.
+
+_Update (January 2024):_ Replaced with [ECBP-1110](https://ecips.ethereumclassic.org/ECIPS/ecip-1110).
 
 ## Motivation
 
