Update ecip-1109.md -> Accepted status
Move to Accepted status assuming the observation period is complete. Following the status path laid out in ECIP-1000.

Last Call (Observation) -> Accepted (Implementation) -> Final (Implemented)

--- a/_specs/ecip-1109.md
+++ b/_specs/ecip-1109.md
@@ -2,7 +2,7 @@
 lang: en
 ecip: 1109
 title: Spiral EVM and Protocol Upgrades
-status: Last Call
+status: Accepted
 type: Meta
 author: Christos Ziogas <chris@etccooperative.org>, Diego López León <diego@etccooperative.org>, Isaac Ardis <isaac@etccooperative.org>
 created: 2023-05-10
