--- a/_specs/ecip-1109.md
+++ b/_specs/ecip-1109.md
@@ -3,7 +3,7 @@ lang: en
 ecip: 1109
 title: Spiral EVM and Protocol Upgrades
 status: Accepted
-type: Meta
+type: Core
 author: Christos Ziogas <chris@etccooperative.org>, Diego López León <diego@etccooperative.org>, Isaac Ardis <isaac@etccooperative.org>
 created: 2023-05-10
 discussions-to: https://github.com/ethereumclassic/ECIPs/discussions/511
