--- a/_specs/ecip-1000.md
+++ b/_specs/ecip-1000.md
@@ -72,16 +72,17 @@ A good reason to transfer ownership is because the original author no longer has
 
 Current ECIP editors:
 
-* @IstoraMandiri - Istora Mandiri, Independent
-* @gitr0n1n - r0n1n, Ethereum Classic DAO
-* @meowsbits - Mr. Meows D. Bits, ETC Cooperative Staff
+* @chris-mercer - Christopher Mercer
+* @IstoraMandiri - Istora Mandiri
+* @meowsbits - Mr. Meows D. Bits
+* @realcodywburns - Cody Burns
 
 Former ECIP editors:
 
 * @atoulme - Antoine Toulme
 * @BelfordZ - Zachary Belford
 * @faraggi - Felipe Faraggi
-* @realcodywburns - Cody Burns
+* @gitr0n1n - r0n1n
 * @soc1c - Talha Cross
 * @sorpaas - Wei Tang
 * @stevanlohja - Stevan Lohja
