Add Spiral Upgrade to List
Add the Spiral Upgrade details to the list following the information provided in ECIP-1109. This upgrade went live on Feb 4, 2024.

--- a/_specs/ecip-1066.md
+++ b/_specs/ecip-1066.md
@@ -4,7 +4,7 @@ ecip: 1066
 title: Ethereum Classic Network Description
 status: Active
 type: Meta
-author: Bob Summerwill (@bobsummerwill), Chris Mercer (@chris-mercer), meowsbits (@meowsbits), r0n1n (@gitr0n1n), Wei Tang (@sorpaas)
+author: Bob Summerwill (@bobsummerwill), meowsbits (@meowsbits), r0n1n (@gitr0n1n), Wei Tang (@sorpaas)
 created: 2019-10-07
 ---
 
