Fix link to ECIP-1110

--- a/_specs/ecip-1100.md
+++ b/_specs/ecip-1100.md
@@ -15,7 +15,7 @@ license: Apache-2
 
 Define a function arbitrating chain acceptance using relative total difficulty and common ancestor time to raise finality confidence.
 
-_Update (January 2024):_ Replaced with [ECBP-1110](https://ecips.ethereumclassic.org/ECIPS/ecip-1110).
+_Update (January 2024):_ Replaced with [ECBP-1110](https://ecips.ethereumclassic.org/ECIPs/ecip-1110).
 
 ## Motivation
 
