Fix links to ECIPs (#1)

--- a/_specs/ecip-1110.md
+++ b/_specs/ecip-1110.md
@@ -13,7 +13,7 @@ license: Apache-2
 
 ## Abstract
 
-Turn off the artificial finality mechanism [ECBP-1100's MESS (Modified Exponential Scoring)](/_specs/ecip-1100.md) in [Core-Geth](https://github.com/etclabscore/core-geth) for Ethereum Classic.
+Turn off the artificial finality mechanism [ECBP-1100's MESS (Modified Exponential Scoring)](https://ecips.ethereumclassic.org/ECIPs/ecip-1100) in [Core-Geth](https://github.com/etclabscore/core-geth) for Ethereum Classic.
 
 ## Motivation
 
@@ -25,7 +25,7 @@ The costs of persisting any kind of subjective chain arbitration on the network 
 
 ## Specification
 
-MESS will be deactivated by default at block `19,250,000`. This is concurrent with [ECIP-1109's Spiral Hardfork](/_specs/ecip-1109.md).
+MESS will be deactivated by default at block `19,250,000`. This is concurrent with [ECIP-1109's Spiral Hardfork](https://ecips.ethereumclassic.org/ECIPs/ecip-1109).
 
 An override flag for this decision will be provided to configure ongoing operation `--override.ecbp1100-deactivate=<number>`.
 
