Update ecip-1066.md (#526)
* Update ecip-1066.md

* Update _specs/ecip-1066.md

Co-authored-by: Chris Ziogas <ziogas_chr@hotmail.com>

* Add Spiral Upgrade to List

Add the Spiral Upgrade details to the list following the information provided in ECIP-1109. This upgrade went live on Feb 4, 2024.

---------

Co-authored-by: Chris Ziogas <ziogas_chr@hotmail.com>

--- a/_specs/ecip-1066.md
+++ b/_specs/ecip-1066.md
@@ -13,6 +13,7 @@ Ethereum Classic network mainnet.
 
 | Version and Code Name                        | Block No. | Released   | Incl EIPs                                                                                                                                                                                                                                                                                                                                                                                                                                                                        | Specs                                               | Blog | 
 |----------------------------------------------|-----------|------------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|----------------------------------------------------------------|  
+| Spiral <sub>Shanghai</sub>                   | 19250000   | 2024-02-04 | [EIP-3651](https://eips.ethereum.org/EIPS/eip-3651) <br/> [EIP-3855](https://eips.ethereum.org/EIPS/eip-3855) <br/> [EIP-3860](https://eips.ethereum.org/EIPS/eip-3860) <br/> [EIP-6049](https://eips.ethereum.org/EIPS/eip-6049)                                                                                                                                                                                                                                                                                                                                                                    | [ECIP-1109](https://ecips.ethereumclassic.org/ECIPs/ecip-1109) | |
 | Mystique <sub>London</sub>                   | 1452500   | 2022-02-12 | [EIP-3529](https://eips.ethereum.org/EIPS/eip-3529) <br/> [EIP-3541](https://eips.ethereum.org/EIPS/eip-3541)                                                                                                                                                                                                                                                                                                                                                                    | [ECIP-1104](https://ecips.ethereumclassic.org/ECIPs/ecip-1104) |                                                   |  |
 | Magneto <sub>Berlin</sub>                    | 13189133  | 2021-07-23 | [EIP-2565](https://eips.ethereum.org/EIPS/eip-2565) <br/> [EIP-2929](https://eips.ethereum.org/EIPS/eip-2929) <br/> [EIP-2718](https://eips.ethereum.org/EIPS/eip-2718) <br/> [EIP-2930](https://eips.ethereum.org/EIPS/eip-2930)                                                                                                                                                                                                                                                | [ECIP-1103](https://ecips.ethereumclassic.org/ECIPs/ecip-1103) |                                                   |  |
 | Thanos                                       | 11700000  | 2020-11-28 | [ECIP-1099](https://ecips.ethereumclassic.org/ECIPs/ecip-1099)                                                                                                                                                                                                                                                                                                                                                                                                                   |                                                                |                                                   |  |
