--- a/_specs/ecip-1110.md
+++ b/_specs/ecip-1110.md
@@ -4,7 +4,7 @@ title: Deactivate MESS (Modified Exponential Subjective Scoring)
 lang: en
 author: Isaac <isaac@etccooperative.org>
 discussions-to: https://github.com/orgs/ethereumclassic/discussions/522
-status: Active
+status: Final
 type: Standards Track
 category: ECBP
 created: 2023-09-17
