--- a/_specs/ecip-1111.md
+++ b/_specs/ecip-1111.md
@@ -11,218 +11,135 @@ discussions-to: https://github.com/orgs/ethereumclassic/discussions/530
 
 ### Simple Summary
 
-Enable the outstanding relevant Ethereum Foundation (ETH) network protocol upgrades on
-the Ethereum Classic network in a hard-fork code-named _Olympia_ to enable
-maximum compatibility across these networks and the greater EVM-scape.
+This proposal activates select Ethereum protocol upgrades on Ethereum Classic via a hard fork named Olympia. Specifically, it introduces EIP-1559 and EIP-3198 to improve fee market efficiency and EVM compatibility. The goal is to enhance interoperability with the broader Ethereum ecosystem while preserving Ethereum Classic's Proof-of-Work consensus and core principles.
 
 ### Abstract
 
-### Outstanding EIPs
+This ECIP proposes the activation of selected Ethereum protocol upgrades on the Ethereum Classic network under the hard fork name Olympia. The upgrade includes EIP-1559, which introduces a dynamic base fee mechanism to improve transaction fee predictability and market efficiency, and EIP-3198, which adds the BASEFEE opcode for EVM compatibility. These changes are intended to enhance interoperability with Ethereum and other EVM-based networks while preserving Ethereum Classic’s Proof-of-Work consensus and immutability principles.
 
-#### Tangerine Whistle (2016)
+The proposal excludes upgrades tied to Ethereum’s transition to Proof-of-Stake or those irrelevant to Ethereum Classic’s architecture, such as validator withdrawal operations and randomness derived from the beacon chain. Implementation requires coordination across client software and network participants for a scheduled hard fork at block heights to be determined on Mordor Testnet and Ethereum Classic Mainnet.
 
-None Outstanding
+### EIP Summaries and Expected Action
 
-#### Spurious Dragon (2016)
+#### Included in Olympia Upgrade
 
-Add support for outstanding relevant protocol-impacting changes introduced in the
-Ethereum Foundation (ETH) network via the _Spurious Dragon_ hardfork. The proposed
-changes for Ethereum Classic's _Olympia_ upgrade include:
+- **EIP-1559 – Fee Market Change**
+Introduces a new transaction type with a dynamically adjusting base fee per gas, which is burned each block, along with an optional tip to incentivize miners. This mechanism improves fee market efficiency, reduces volatility in gas pricing, and establishes a foundation for a sustainable block space economy on Ethereum Classic.
 
-EIP | Eth PR | omit or include
--- | -- | --
-161 (State trie clearing (invariant-preserving alternative)) | # |  Omit
-170 (Contract code size limit) - | # | Omit
+- **EIP-3198 – BASEFEE Opcode**
+Adds a new opcode that allows smart contracts to access the current block’s basefee, as defined by EIP-1559. This enables more accurate on-chain gas estimation and supports modern fee-aware applications.
 
-#### Byzantium (2017)
+This ECIP proposes the activation of these changes at the following block heights:
 
-Add support for outstanding relevant protocol-impacting changes introduced in the
-Ethereum Foundation (ETH) network via the _Byzantium_ hardfork. The proposed
-changes for Ethereum Classic's _Olympia_ upgrade include:
+<!-- Block heights to be determined after testnet validation and client release coordination -->
 
-EIP | Eth PR | omit or include
--- | -- | --
-649 (Delay difficulty bomb (block reward reduction)) | # |  Omit
+- Mordor Testnet: `TBD`
 
-#### Constantinople and St. Petersburg (2019)
+- Ethereum Classic Mainnet: `TBD`
 
-Add support for outstanding relevant protocol-impacting changes introduced in the
-Ethereum Foundation (ETH) network via the _Constantinople_ hardfork. The proposed
-changes for Ethereum Classic's _Olympia_ upgrade include:
-
-EIP | Eth PR | omit or include
--- | -- | --
-1234 (Delay difficulty bomb (block reward reduction)) | # |  Omit
-1283 (REMOVING Testnet Net gas metering for SSTORE without dirty maps) | # |  Omit
-
-#### Istanbul (2019)
-
-None Outstanding
-
-#### Muir Glacier (2020)
-
-Not Applicable
-
-#### Staking deposit contract deployed (2020)
-
-Not Applicable
-
-#### Beacon Chain genesis (2020)
-
-Not Applicable
-
-#### Berlin (2021)
-
-None Outstanding
-
-#### London (2021)
-Add support for outstanding relevant protocol-impacting changes introduced in the
-Ethereum Foundation (ETH) network via the _London_ hardfork. The proposed
-changes for Ethereum Classic's _Olympia_ upgrade include:
-
-EIP | Eth PR | omit or include
--- | -- | --
-1559 (Fee market change) | #22837 #22896 |  Include
-3198 (BASEFEE opcode) | #22837 | Include
-3228 (💣 delay) | #22840 and #22870 | Omit
-
-#### Altair (2021)
-
-Not Applicable
-
-#### Arrow Glacier (2021)
-
-Not Applicable
-
-#### Gray Glacier (2022)
-
-Not Applicable
-
-#### Bellatrix (2022)
-
-Not Applicable
-
-#### Paris (2022)
-
-Add support for outstanding relevant protocol-impacting changes introduced in the
-Ethereum Foundation (ETH) network via the _Paris_ hardfork. The proposed
-changes for Ethereum Classic's _Olympia_ upgrade include:
-
-EIP | Description | Status
--- | -- | --
-3675 | Upgrade consensus to Proof-of-Stake | # |  Omit
-4399 | Supplant DIFFICULTY opcode with PREVRANDAO | # |  Omit
-
-#### Shanghai-Capella (2023)
-Add support for outstanding relevant protocol-impacting changes introduced in the
-Ethereum Foundation (ETH) network via the _Shanghai_ hardfork. The proposed
-changes for Ethereum Classic's _Olympia_ upgrade include:
-
-EIP | Description | Status
--- | -- | --
-4895 | Beacon chain push withdrawals as operations | # |  Omit
-
-#### Cancun-Deneb (2024)
-Add support for outstanding relevant protocol-impacting changes introduced in the
-Ethereum Foundation (ETH) network via the _Cancun_ hardfork. The proposed
-changes for Ethereum Classic's _Olympia_ upgrade include:
-
-EIP | Description | Status
--- | -- | --
-1153 | Transient storage opcodes | # |  Omit
-4788 | Beacon block root in the EVM | # |  Omit
-4844 | Shard Blob Transactions | # |  Omit
-5656 | MCOPY - Memory copying instruction | # |  Omit
-6780 | SELFDESTRUCT only in same transaction | # |  Omit
-7516 | BLOBBASEFEE opcode | # |  Omit
-
-#### Prague-Electra (2025)
-Add support for outstanding relevant protocol-impacting changes introduced in the
-Ethereum Foundation (ETH) network via the _Prague_ hardfork. The proposed
-changes for Ethereum Classic's _Olympia_ upgrade include:
-
-EIP | Description | Status
--- | -- | --
-2537 | Precompile for BLS12-381 curve operations | # |  Omit
-2935 | Save historical block hashes in state | # |  Omit
-6110 | Supply validator deposits on chain | # |  Omit
-7002 | Execution layer triggerable exits | # |  Omit
-7251 | Increase the MAX_EFFECTIVE_BALANCE | # |  Omit
-7549 | Move committee index outside Attestation | # |  Omit
-7623 | Increase calldata cost | # |  Omit
-7685 | General purpose execution layer requests | # |  Omit
-7691 | Blob throughput increase | # |  Omit
-7702 | Set EOA account code | # |  Omit
-7840 | Add blob schedule to EL config files | # |  Omit
-
-
-#### EIP Summaries and expected action
-##### Included - Olympia
-- EIP 1559 "Fee market change": An additional transaction type which includes a pricing mechanism that includes fixed-per-block base fee and dynamically expands/contracts block sizes to deal with transient congestion.
-  - The implementation of EIP-1559 in the London Upgrade made the transaction fee mechanism more complex, but made gas fees more predictable, resulting in a more efficient transaction fee market.
-- EIP 3198 "BASEFEE opcode": Adds an opcode that gives the EVM access to the block’s base fee. 
-  - The intended use case would be for contracts to get the value of the base fee of EIP-1559 transactions for gas estimatations
-
-##### Omitted - London
-- EIP 3228 "💣 delay": Delays the difficulty bomb to show effect the first week of December 2021.
-  - Not applicable to ETC due to difficulty bomb being defused 
-
-##### Omitted - Shanghai
-- EIP 4399 "Supplant DIFFICULTY opcode with PREVRANDAO": Historically, the DIFFICULTY (0X44) instruction was used as a source of pseudo randomness. With the switch to Proof of Stake, Ethereum removed the work difficulty so, as a replacement, they now expose a [RANDAO](https://ethereum.org/en/developers/docs/consensus-mechanisms/pos/block-proposal/#random-selection) value taken from the beacon chain. Since v0.8.18, Solidity [deprecates](https://docs.soliditylang.org/en/v0.8.18/cheatsheet.html#global-variables) `block.difficulty` and replaces it with `block.prevrandao` but this syntactic change still compiles to the same EVM opcode, i.e. `0x44`, which in the Ethereum Classic network will continue to evaluate as the aforementioned _block difficulty_ value.
-- EIP 4895 "Beacon chain push withdrawals as operations": In Proof of Stake networks, enable validator withdrawals from the beacon chain to the EVM. Ethereum Classic network only grants rewards through Proof of Work mining on the canonical chain, there are no validators, so this doesn't apply.
-
-
-This document proposes the following blocks at which to implement these changes
-in the Classic networks:
-
-- `TBD` on Mordor Testnet PoW-testnet (TBD)
-- `TBD` on Ethereum Classic Mainnet PoW-mainnet (TBD)
-
-For more information on the opcodes and their respective EIPs and
-implementations, please see the _Specification_ section of this document.
+For full technical specifications, see the Specification section below.
 
 ### Motivation
 
-To enhance the Ethereum Virtual Machine’s (EVM) capabilities, various opcodes shall be added to the Ethereum Classic networks, all of which have been in use on the Ethereum Foundation networks since 2024.
+The Olympia upgrade seeks to advance Ethereum Classic’s protocol capabilities by adopting proven Ethereum Virtual Machine (EVM) enhancements introduced by the Ethereum Foundation. By implementing EIP-1559 and EIP-3198, Ethereum Classic will gain compatibility with modern transaction formats and smart contract expectations used across the broader EVM ecosystem.
+
+These changes provide three core benefits:
+
+1. EVM Compatibility – Developers can deploy EVM-standard dApps on Ethereum Classic without modification or workarounds, reducing friction and encouraging cross-chain application portability.
+
+1. Fee Market Modernization – EIP-1559 introduces a predictable and more user-friendly gas pricing mechanism, aligning ETC with fee market improvements already adopted by major EVM chains.
+
+1. Network Utility and Adoption – Aligning with the broader EVM roadmap ensures Ethereum Classic remains relevant for developers, tooling providers, infrastructure teams, and users seeking a Proof-of-Work alternative to Ethereum.
+
+By narrowing the technical gap between Ethereum Classic and other EVM networks, Olympia enables ETC to remain a credible and interoperable smart contract platform while preserving its unique commitment to Proof-of-Work and protocol immutability.
 
 ### Specification
 
-Technical specifications for each EIP can be found at those documents
-respectively:
+The Olympia upgrade activates the following EIPs on the Ethereum Classic network. Technical specifications and implementation details are defined in the canonical EIP documentation:
 
-_London_
-- [EIP-3198](https://eips.ethereum.org/EIPS/eip-3198): BASEFEE opcode
-- [EIP-1559](https://eips.ethereum.org/EIPS/eip-1559): Fee market change
-- [EIP-3228](https://eips.ethereum.org/EIPS/eip-3228): 💣 delay
+#### Included from London Hard Fork
 
-_Shanghai_
-- [EIP-4399](https://eips.ethereum.org/EIPS/eip-4399): Supplant DIFFICULTY opcode with PREVRANDAO
-- [EIP-4895](https://eips.ethereum.org/EIPS/eip-4895): Beacon chain push withdrawals as operations
+[EIP-1559](https://eips.ethereum.org/EIPS/eip-1559) – Fee Market Change
+Introduces a new transaction type with a dynamic basefee, burned per block, and optional miner tip.
+
+[EIP-3198](https://eips.ethereum.org/EIPS/eip-3198) – BASEFEE Opcode
+Adds the BASEFEE opcode (0x48) to the EVM, allowing smart contracts to query the current block’s base fee.
+
+No additional changes beyond these EIPs are included in the Olympia upgrade. Clients should adhere strictly to the behavior defined in the linked specifications.
 
 ### Rationale
 
-__Interoperability__: Establishing and maintaining interoperable behavior
-between Ethereum clients is essential for developers and end-user adoption,
-yielding benefits for all participating chains (e.g., ETC and ETH, Mordor and Sepolia).
+__Interoperability__: Maintaining interoperability with Ethereum and other EVM-compatible chains is essential to ensuring developer portability, tooling support, and infrastructure reuse. By aligning with key protocol features like EIP-1559 and EIP-3198, Ethereum Classic reduces fragmentation and remains a viable deployment target for modern EVM applications and clients (e.g., ETC ↔ ETH parity).
 
-__Immutability__: None of the introduced new opcodes in the EVM has the
-potential to change the behavior of existing contracts; in the case where
-previously an arbitrary invalid bytecode would have been deployed to the
-network, none of them would be able to modify the state of the Ethereum Classic
-networks retrospectively. Adding opcodes to the EVM increases its functionality
-and should be considered a feature upgrade rather than a modification.
+__Immutability__: The proposed upgrades introduce new transaction types and opcodes but do not alter the semantics of existing contracts or state. Historical contracts will behave identically, and no prior behavior is retroactively affected. These are strictly additive changes to EVM functionality and maintain the network’s commitment to immutability.
 
-__Standards Compliance__: In order to guarantee compatibility with the greter EVM standard, we need to support valid evm transactions types so the application layer can support modern web3 dapps. 
+__Standards Compliance__: Supporting canonical EIPs is critical for application-layer compatibility. Without EIP-1559 and EIP-3198, Ethereum Classic would lack support for transaction types and opcodes widely expected by wallets, bridges, rollups, and contract compilers. Adopting these standards helps ensure that modern Web3 applications can be deployed on ETC without modification.
 
 ### Implementation
 
-Adoption of the content of this ECIP requires a hard fork as it introduces
-changes that are not backward compatible.
+Adopting the Olympia upgrade requires a coordinated hard fork, as it introduces non-backward-compatible changes to the Ethereum Classic protocol and transaction format. Clients must implement support for the EIP-1559 fee market and the EIP-3198 `BASEFEE` opcode.
 
-The following clients with Ethereum Classic support implement the _London_
-features currently and will be able to support the _Olympia_ upgrade:
+The following client currently maintains compatibility with the Ethereum Classic network and supports the necessary features introduced in Ethereum’s London upgrade:
 
-- Core-Geth (maintained by ETC Coopertive)
+- [Core-Geth](https://github.com/ethereumclassic/core-geth) – Maintained by the Ethereum Classic community, Core-Geth includes a stable implementation of EIP-1559 and EIP-3198, and will be the primary reference client for the Olympia fork.
+
+Client implementers must ensure correct behavior as defined in the relevant EIPs and coordinate activation on both Mordor Testnet and Ethereum Classic Mainnet at the block heights defined in this ECIP.
+
+Testing should include full validation of:
+
+- Legacy and EIP-1559 transaction types
+
+- Gas accounting for basefee burn and miner tips
+
+- `BASEFEE` opcode availability and correct return values
+
+- Cross-version transaction replay protection
+
+Community coordination is required to finalize testnet and mainnet fork block numbers, along with updated client releases that embed the Olympia fork rules.
+
+### EIP Compatibility Scope
+
+The Olympia upgrade is purposefully limited in scope. It includes only the two EIPs relevant to fee market modernization and EVM compatibility (EIP-1559 and EIP-3198).
+
+All other Ethereum Foundation EIPs—from Tangerine Whistle (2016) to Prague-Electra (2025)—were reviewed and explicitly omitted due to one or more of the following:
+
+- Dependence on Proof-of-Stake consensus
+- Incompatibility with ETC's Proof-of-Work architecture
+- Lack of developer or user demand
+- Risk of breaking immutability or changing contract behavior
+
+### ❌ Omitted EIPs – Compatibility Matrix for ECIP-1111 (Olympia Upgrade)
+
+This table documents EIPs reviewed but excluded from the Olympia upgrade. EIPs are organized by Ethereum Foundation hard fork and include a brief rationale for omission.
+
+| Fork                   | EIP     | Title                                              | Status  | Rationale                                      |
+|------------------------|---------|----------------------------------------------------|---------|------------------------------------------------|
+| Spurious Dragon (2016) | 161     | State trie clearing                                | Omit    | Not required; state pruning not urgent on ETC |
+|                        | 170     | Contract code size limit                           | Omit    | ETC has not encountered this limit             |
+| Byzantium (2017)       | 649     | Difficulty bomb delay / reward reduction           | Omit    | ETC has no difficulty bomb                     |
+| Constantinople (2019)  | 1234    | Difficulty bomb delay / reward reduction           | Omit    | Same as above                                  |
+|                        | 1283    | SSTORE gas metering change                         | Omit    | Not consensus-critical; minor utility          |
+| London (2021)          | 3228    | Difficulty bomb delay                              | Omit    | ETC has no difficulty bomb                     |
+| Paris (2022)           | 3675    | Switch to Proof of Stake                           | Omit    | Incompatible with ETC's Proof-of-Work          |
+|                        | 4399    | Replace DIFFICULTY with PREVRANDAO                 | Omit    | Beacon RANDAO not available in PoW             |
+| Shanghai (2023)        | 4895    | Beacon chain withdrawals                           | Omit    | ETC has no validators or withdrawal logic      |
+| Cancun (2024)          | 1153    | Transient storage opcodes                          | Omit    | Optional; requires wider EVM analysis          |
+|                        | 4788    | Beacon block root in EVM                           | Omit    | Not applicable on PoW chain                    |
+|                        | 4844    | Shard blob transactions (proto-danksharding)       | Omit    | Requires significant infra and PoS context     |
+|                        | 5656    | MCOPY memory instruction                           | Omit    | Performance optimization, not critical         |
+|                        | 6780    | SELFDESTRUCT limitation                            | Omit    | Requires consensus discussion                  |
+|                        | 7516    | BLOBBASEFEE opcode                                 | Omit    | Part of blob tx infra; not applicable yet      |
+| Prague (2025)          | 2537    | BLS12-381 precompile                               | Omit    | Used for PoS cryptography                      |
+|                        | 2935    | Save historical block hashes in state              | Omit    | Not essential; increases state size            |
+|                        | 6110    | Supply validator deposits                          | Omit    | ETC does not use validators                    |
+|                        | 7002    | Execution-layer exits                              | Omit    | PoS-specific                                   |
+|                        | 7251    | MAX_EFFECTIVE_BALANCE increase                     | Omit    | PoS-specific                                   |
+|                        | 7549    | Move committee index                               | Omit    | PoS-specific                                   |
+|                        | 7623    | Increase calldata cost                             | Omit    | Requires ecosystem-wide coordination           |
+|                        | 7685    | EL-execution-layer requests                        | Omit    | PoS-specific                                   |
+|                        | 7691    | Blob throughput increase                           | Omit    | Blob infra not present on ETC                  |
+|                        | 7702    | Set EOA account code                               | Omit    | Not required on ETC                            |
+|                        | 7840    | Blob schedule in EL config                         | Omit    | Blob txs not supported on ETC                  |
 
 ## Copyright
 
